Bug 450862 - [kbugreport] OS arch detection not working on Windows 10
Summary: [kbugreport] OS arch detection not working on Windows 10
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kxmlgui
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-26 07:43 UTC by nekonexus
Modified: 2022-04-03 13:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
OS Architecture Screenshot (15.22 KB, image/png)
2022-02-26 07:43 UTC, nekonexus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nekonexus 2022-02-26 07:43:09 UTC
Created attachment 147133 [details]
OS Architecture Screenshot

SUMMARY

The "Submit Bug Report" dialog window in the "Help" toolbar tab can't detect what architecture of Windows 10 is being ran.
(I'm running 64-bit Windows 10)


STEPS TO REPRODUCE
1. Download Filelight from the Microsoft Store (as indicated by the KDE Product page: https://apps.kde.org/filelight/ )
2. Open the "Submit Bug Report" dialog window in the "Help" toolbar tab
3. See that it claims the architecture is "unknown"

OBSERVED RESULT

Detected OS architecture is unknown

EXPECTED RESULT

Detected OS architecture should be 64-bit

SOFTWARE/OS VERSIONS
Windows: Windows 10 Home (Version	10.0.19042 Build 19042)
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-02-26 14:24:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/99
Comment 2 Nicolas Fella 2022-04-03 13:49:06 UTC
Git commit cd8e7ce5a6e6779923ba6676b13ec6929580bf6a by Nicolas Fella.
Committed on 03/04/2022 at 13:20.
Pushed by aacid into branch 'master'.

Replace OS-specific system information code with QSysInfo

M  +21   -1    src/kbugreport.cpp
M  +0    -48   src/systeminformation_p.h

https://invent.kde.org/frameworks/kxmlgui/commit/cd8e7ce5a6e6779923ba6676b13ec6929580bf6a