Replace OS-specific system information code with QSysInfo

BUG: 450862